--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anonymous Q&A System</title>
+    <title>匿名问答系统</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="app">
-        <h1>Anonymous Q&A System</h1>
+        <h1>匿名问答系统</h1>
         <div id="question-form">
-            <textarea id="question-input" placeholder="Ask your question here..."></textarea>
-            <button onclick="submitQuestion()">Submit</button>
+            <textarea id="question-input" placeholder="在此输入您的问题..."></textarea>
+            <button onclick="submitQuestion()">提交</button>
         </div>
         <div id="questions-list">
-            <h2>Questions</h2>
+            <h2>问题列表</h2>
             <ul id="questions">
-                <!-- Questions will be added here -->
+                <!-- 问题将显示在这里 -->
             </ul>
         </div>
     </div>
